--- a/merlot.service
+++ b/merlot.service
@@ -1,11 +1,11 @@
 [Unit]
 Description=merlot server
-ConditionPathExists=/home/merlot-user/go/bin/ink
+ConditionPathExists=/home/kristofer/go/bin/ink
 After=network.target
 
 [Service]
 Type=simple
-User=merlot-user
+User=kristofer
 LimitNOFILE=1024
 PermissionsStartOnly=true
 
@@ -13,13 +13,13 @@ Restart=on-failure
 RestartSec=100ms
 StartLimitIntervalSec=60
 
-WorkingDirectory=/home/merlot-user/merlot
-ExecStart=/home/merlot-user/go/bin/ink ./src/main.ink
+WorkingDirectory=/home/kristofer/p/merlot
+ExecStart=/home/kristofer/go/bin/ink ./src/main.ink
 
 # make sure log directory exists and owned by syslog
 PermissionsStartOnly=true
 ExecStartPre=/bin/mkdir -p /var/log/merlot
-ExecStartPre=/bin/chown syslog:adm /var/log/merlot
+ExecStartPre=/bin/chown root:adm /var/log/merlot
 ExecStartPre=/bin/chmod 755 /var/log/merlot
 StandardOutput=syslog
 StandardError=syslog
